--- a/src/lib/styles.css
+++ b/src/lib/styles.css
@@ -6,11 +6,15 @@
 :root {
 	--background: var(--color-white);
 	--foreground: var(--color-neutral-800);
+	--foreground-muted: var(--color-neutral-600);
 }
 
 @theme {
 	--color-background: var(--background);
 	--color-foreground: var(--foreground);
+	--color-foreground-muted: var(--foreground-muted);
+
+	--font-sans: 'Inter', 'sans-serif';
 }
 
 html,
@@ -28,4 +32,5 @@ body {
 	position: relative;
 	background-color: var(--color-background);
 	color: var(--color-foreground);
+	font-optical-sizing: auto;
 }
